--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,23 @@
 body {
+background: radial-gradient(circle at 10% 20%, rgb(226, 240, 254) 0%, rgb(255, 247, 228) 90%);
 font-family: 'Nunito Sans', sans-serif;
 font-family: 'Roboto Mono', monospace;
 }
-
+header{
+  display: flex;
+justify-content: center;
+margin: 5px 0px;
+}
 footer{
-  text-align: center;
+  display: flex;
+justify-content: center;
   font-size:12px;
+}
+.dictionary{
+display: flex;
+justify-content:center;
+} 
+.button{
+  border: black 2px solid;
+  border-radius: 10px;
 }
