--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,7 @@ font-family: 'Roboto Mono', monospace;
 header{
 display: flex;
 justify-content: center;
+text-align: center;
 margin: 5px 0px 0px 0px;
 }
 
@@ -36,6 +37,9 @@ padding: 10px;
   color:#362999;
 }
 
+.container{
+  max-width: 100%;
+}
 .page-content{
   display: flex;
   justify-content: center;
