--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,8 @@ display: flex;
 justify-content: center;
 margin: 5px 0px 0px 0px;
 text-align: center;
+color:white;
+ text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
 }
 
 footer{
@@ -58,7 +60,11 @@ ul{
 
 .container{
   max-width: 100%;
+  background-size:cover;
+  background-repeat: no-repeat;
 }
+
+
 .example{
   font-size:15px;
   opacity:0.8;
@@ -73,7 +79,6 @@ ul{
   background-color: white;
   border: 4px solid black;
   border-radius: 10px;
-  box-shadow: 10px 10px #d6edf1;
   box-sizing: border-box;
   margin: 10px;
   max-width: 100%;
@@ -85,6 +90,9 @@ ul{
 }
 .titles{
   font-size: 30px;
+}
+.searchWord{
+  color:#4229ff;
 }
 
 @media only screen and (max-width: 600px) {
